logs/pypap.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pypap'...
Compiling './lib/python3.5/site-packages/pypap/entities.py'...
***   File "./lib/python3.5/site-packages/pypap/entities.py", line 207
    raise ValueError, "{0} is not a push-response node".format(
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pypap/rim.py'...
***   File "./lib/python3.5/site-packages/pypap/rim.py", line 65
    raise ValueError, ("{0} is not a subscriptionquery-response "
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pypap/serialize.py'...
***   File "./lib/python3.5/site-packages/pypap/serialize.py", line 19
    raise ValueError, "{0} missing control part".format(message)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pypap/statuscodes.py'...
***   File "./lib/python3.5/site-packages/pypap/statuscodes.py", line 33
    raise ValueError, "{0} is not a valid Success code.".format(
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pypap-0.2.dev201201051355.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
